fixed overlapping of hide-page-buttons

--- a/css/_eks.scss
+++ b/css/_eks.scss
@@ -136,13 +136,13 @@ $size: 1.5em;
     position:fixed;// doesn't work with .eks_page position relative
     top:30%;
     width:$size;
-    height:$size;
     margin:0 5px;
     padding:0;
-    line-height:$size;
+    line-height:$size - .1em;
     border:1px solid #ccc;
     border-radius:2px;
     background-color:$clr_confirm;
+    z-index:1;//overlapping with relative positioned pages
     &:nth-of-type(2){margin-top:1.2 * $size;}
     &:nth-of-type(3){margin-top:2 * 1.2 * $size;}
     &:nth-of-type(4){margin-top:3 * 1.2 * $size;}
@@ -156,8 +156,12 @@ $size: 1.5em;
         position:absolute;
         top:0;
         left:$size;
+        padding-left: .2em;
+        padding-right: .2em;
         white-space: nowrap;
-        margin-left:.1em;
+        background-color: #fafafa;
+        border-top-right-radius: 2px;
+        border-bottom-right-radius: 2px;
       }
     }
     @media print{display:none;}
